* Fixed button test not running, * updated sass-lint * updated package versions. * updated editorconfig

--- a/src/shared/native-form-control/button/button.component.html
+++ b/src/shared/native-form-control/button/button.component.html
@@ -2,7 +2,7 @@
   <ng-container [ngTemplateOutlet]="content"></ng-container>
 </span>
 
-<ng-container [ngIf]="!isAnimated" [ngTemplateOutlet]="content"></ng-container>
+<ng-container *ngIf="!isAnimated" [ngTemplateOutlet]="content"></ng-container>
 
 <ng-template #content>
   <ng-content></ng-content>
