--- a/apps/blank/src/app/app.component.html
+++ b/apps/blank/src/app/app.component.html
@@ -1,1 +1,6 @@
+<nav class="navigation">
+  <a [routerLink]="['']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
+  <a [routerLink]="['example-one']" routerLinkActive="active">Example One</a>
+  <a [routerLink]="['example-two']" routerLinkActive="active">Example Two</a>
+</nav>
 <router-outlet></router-outlet>
