--- a/libs/example/feature-flags/src/lib/components/example-feature-two/example-feature-two.component.html
+++ b/libs/example/feature-flags/src/lib/components/example-feature-two/example-feature-two.component.html
@@ -1,4 +1,4 @@
-<p>example-two works!</p>
+<p>example-feature-two works!</p>
 
 <div *hasDevFeatureEnabled="featureFlag" >
   <p>Work in progress</p>
