--- a/apps/blank/src/app/app.component.scss
+++ b/apps/blank/src/app/app.component.scss
@@ -1,15 +1,16 @@
-.navigation{
+.navigation {
   display: flex;
   flex-direction: row;
   gap: 12px;
   padding: 12px 20px;
 }
 
-a{
+a {
   padding: 8px 12px;
+  text-decoration: inherit;
 }
 
-.active{
+.active {
   background-color: #143157;
   border-radius: 5%;
   color: white;
